@@ -79,7 +79,7 @@ class PathDocument(MapEntityDocument):
     model = Path
 
     def get_context_data(self, *args, **kwargs):
-        self.get_object().prepare_elevation_chart(self.request)
+        self.get_object().prepare_elevation_chart(self.request.build_absolute_uri('/'))
         return super(PathDocument, self).get_context_data(*args, **kwargs)
 
 
